# harriet-vision-nursery

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: conf.rs  main.rs  routes.rs  worker.rs
src/highlights/: cellular_automaton.rs  cut_highlights_from_image.rs  extract_highlights.rs  find_edges.rs  heat_map.rs  helpers.rs  mod.rs  point.rs  visual_object.rs
