[package]
name = "harriet-vision-nursery"
version = "0.1.0"
authors = ["Michael Bausano <bausanomichal@gmail.com>"]
description = "Simulates a simple visual attention "
repository = "https://github.com/bausano/harriet-vision-nursery"
readme = "README.md"

[dependencies]
dotenv = "0.14"
image = "0.21"
rayon = "1.2"
rocket = "0.4"
rocket_contrib = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
